@@ -13,7 +13,6 @@ import java.util.List;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import org.apache.commons.collections4.ListUtils;
 import org.springframework.data.domain.Page;
@@ -37,7 +36,7 @@ public class MockNotificationContentRepository extends MockRepositoryContainer<L
         List<NotificationEntity> notifications = findAll().stream()
             .sorted(Comparator.comparing(NotificationEntity::getCreatedAt))
             .filter(withinRange)
-            .collect(Collectors.toList());
+            .toList();
         int pageSize = pageable.getPageSize();
         int pageNumber = pageable.getPageNumber();
         List<List<NotificationEntity>> partitionedLists = ListUtils.partition(notifications, pageSize);
@@ -53,7 +52,7 @@ public class MockNotificationContentRepository extends MockRepositoryContainer<L
     public List<NotificationEntity> findByCreatedAtBefore(final OffsetDateTime date) {
         return findAll().stream()
             .filter(entity -> entity.getCreatedAt().isBefore(date))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
@@ -77,7 +76,7 @@ public class MockNotificationContentRepository extends MockRepositoryContainer<L
         List<NotificationEntity> notifications = findAll().stream()
             .sorted(Comparator.comparing(NotificationEntity::getProviderCreationTime))
             .filter(processedFalse)
-            .collect(Collectors.toList());
+            .toList();
         int pageSize = pageable.getPageSize();
         int pageNumber = pageable.getPageNumber();
         List<List<NotificationEntity>> partitionedLists = ListUtils.partition(notifications, pageSize);
@@ -97,7 +96,7 @@ public class MockNotificationContentRepository extends MockRepositoryContainer<L
             .sorted(Comparator.comparing(NotificationEntity::getProviderCreationTime))
             .filter(providerConfigIdEqual)
             .filter(processedFalse)
-            .collect(Collectors.toList());
+            .toList();
         int pageSize = pageable.getPageSize();
         int pageNumber = pageable.getPageNumber();
         List<List<NotificationEntity>> partitionedLists = ListUtils.partition(notifications, pageSize);
@@ -113,7 +112,7 @@ public class MockNotificationContentRepository extends MockRepositoryContainer<L
     public List<NotificationEntity> findAllByIdInOrderByProviderCreationTimeAsc(final List<Long> notificationIds) {
         return findAllById(notificationIds).stream()
             .sorted(Comparator.comparing(NotificationEntity::getProviderCreationTime))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
@@ -126,7 +125,7 @@ public class MockNotificationContentRepository extends MockRepositoryContainer<L
     public int bulkDeleteCreatedAtBefore(OffsetDateTime date) {
         List<Long> notificationsToDelete = findByCreatedAtBefore(date).stream()
             .map(NotificationEntity::getId)
-            .collect(Collectors.toList());
+            .toList();
         deleteAllById(notificationsToDelete);
         return notificationsToDelete.size();
     }
@@ -171,5 +170,74 @@ public class MockNotificationContentRepository extends MockRepositoryContainer<L
             .stream()
             .filter(providerEqual.and(notificationTypeEqual))
             .count();
+    }
+
+    @Override
+    public Page<NotificationEntity> findByProviderConfigIdAndMappingToJobsFalseAndProcessedFalseOrderByProviderCreationTimeAsc(long providerConfigId, Pageable pageable) {
+        Predicate<NotificationEntity> mappingFalse = Predicate.not(NotificationEntity::isMappingToJobs);
+        Predicate<NotificationEntity> notProcessed = Predicate.not(NotificationEntity::getProcessed);
+        Predicate<NotificationEntity> providerConfigIdEqual = notificationEntity -> notificationEntity.getProviderConfigId().equals(providerConfigId);
+        List<NotificationEntity> notifications = findAll().stream()
+                .sorted(Comparator.comparing(NotificationEntity::getProviderCreationTime))
+                .filter(providerConfigIdEqual)
+                .filter(mappingFalse)
+                .filter(notProcessed)
+                .toList();
+        int pageSize = pageable.getPageSize();
+        int pageNumber = pageable.getPageNumber();
+        List<List<NotificationEntity>> partitionedLists = ListUtils.partition(notifications, pageSize);
+        int totalPages = partitionedLists.size();
+        if (partitionedLists.size() >= pageNumber) {
+            return new PageImpl<>(partitionedLists.get(pageNumber), pageable, totalPages);
+        } else {
+            return new PageImpl<>(List.of());
+        }
+    }
+
+    @Override
+    public boolean existsByProviderConfigIdAndMappingToJobsFalse(long providerConfigId) {
+        Predicate<NotificationEntity> providerConfigIdEqual = notificationEntity -> notificationEntity.getProviderConfigId().equals(providerConfigId);
+        Predicate<NotificationEntity> notMapped = Predicate.not(NotificationEntity::isMappingToJobs);
+        Predicate<NotificationEntity> providerAndMappingToJobsFalse = providerConfigIdEqual.and(notMapped);
+        return findAll()
+                .stream()
+                .anyMatch(providerAndMappingToJobsFalse);
+    }
+
+    @Override
+    public void setMappingToJobsByIds(Set<Long> notificationIds) {
+        findAllById(notificationIds)
+                .forEach(NotificationEntity::setMappingToJobsToTrue);
+    }
+
+    @Override
+    public void setMappingToJobsFalseWhenProcessedFalse(long providerConfigId) {
+        Predicate<NotificationEntity> providerConfigIdEqual = notificationEntity -> notificationEntity.getProviderConfigId().equals(providerConfigId);
+        Predicate<NotificationEntity> notProcessed = Predicate.not(NotificationEntity::getProcessed);
+        Predicate<NotificationEntity> notMapped = Predicate.not(NotificationEntity::isMappingToJobs);
+        Predicate<NotificationEntity> providerMappingAndProcessedFalse = providerConfigIdEqual.and(notMapped).and(notProcessed);
+
+        List<NotificationEntity> entities = findAll().stream()
+                .filter(providerMappingAndProcessedFalse)
+                .toList();
+
+        List<NotificationEntity> updatedEntities = entities.stream()
+                .map(this::setMappingAndProcessedToFalse)
+                .toList();
+
+        saveAll(updatedEntities);
+    }
+
+    private NotificationEntity setMappingAndProcessedToFalse(NotificationEntity entity) {
+        return new NotificationEntity(entity.getId(),
+                entity.getCreatedAt(),
+                entity.getProvider(),
+                entity.getProviderConfigId(),
+                entity.getProviderCreationTime(),
+                entity.getNotificationType(),
+                entity.getContent(),
+                false,
+                entity.getContentId(),
+                false);
     }
 }
